fix(styles/sidebar): fix logo on mobile view

--- a/resources/scss/employee/_side-top-bar.scss
+++ b/resources/scss/employee/_side-top-bar.scss
@@ -135,7 +135,7 @@ sidebar.main-menu {
                 img,
                 picture {
                     padding: initial;
-                    width: initial;
+                    width: 1.5rem;
                     opacity: 1;
                 }
             }
@@ -143,7 +143,7 @@ sidebar.main-menu {
             @include pri-sm-logo;
 
             button.main-menu div:has(img) picture {
-                padding: 0.25rem;
+                padding: 0.5rem 0.25rem;
                 height: auto;
             }
 
